chore: simplify CI workflow and rename target to blas_benchmark

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,12 @@ name: Build and Test
 
 on:
   push:
-    branches: [main, master]
+    branches: main
     paths-ignore:
       - '**.md'
       - 'docs/**'
   pull_request:
-    branches: [main, master]
+    branches: main
   workflow_dispatch:
 
 jobs:
@@ -21,20 +21,18 @@ jobs:
           submodules: recursive
           fetch-depth: 0
 
-      - name: Install Clang 18 and libc++
+      - name: Install Clang 18, libc++ and OpenBLAS
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang-18 libc++-18-dev libc++abi-18-dev lld-18
+          sudo apt-get install -y clang-18 libc++-18-dev libc++abi-18-dev lld-18 libopenblas-dev
           sudo update-alternatives --install /usr/bin/clang clang /usr/bin/clang-18 100
           sudo update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-18 100
+          sudo update-alternatives --install /usr/bin/ld ld /usr/bin/ld.lld-18 100
 
       - name: Install Xmake
         uses: xmake-io/github-action-setup-xmake@v1
         with:
           xmake-version: latest
-
-      - name: Install OpenBLAS
-        run: sudo apt-get install -y libopenblas-dev
 
       - name: Cache Xmake
         uses: actions/cache@v4
@@ -42,26 +40,18 @@ jobs:
           path: |
             ~/.xmake
             .xmake
+            build
           key: xmake-${{ runner.os }}-${{ hashFiles('xmake.lua', '.gitmodules') }}
           restore-keys: xmake-${{ runner.os }}-
 
       - name: Configure and Build
         run: |
-          xmake f -m release -y
-          xmake -j$(nproc)
-
-      - name: Generate compile_commands.json
-        run: xmake compdb
+          xmake config --plat=linux -m release --toolchain=clang -y -v
+          xmake build -v
 
       - name: Verify help output
         run: xmake run cblas_benchmark --help
 
-      - name: Run benchmark test (Level 1)
-        run: xmake run cblas_benchmark --level1 10000 -c 3
-
-      - name: Run benchmark test (Level 2)
-        run: xmake run cblas_benchmark --level2 256,256 -c 2
-
-      - name: Run benchmark test (Level 3)
-        run: xmake run cblas_benchmark --level3 128,128,128 -c 2
+      - name: Run benchmark test
+        run: xmake run cblas_benchmark -1 10000 -2 256,256 -3 128,128,128 -c 2 -w 1 -t 2
 
